# Z2

./: .gitignore  CMakeLists.txt  ReadMe.md
GUI/: CMakeLists.txt
GUI/includes/Client/: Client.hpp  ParseArg.hpp
GUI/includes/Factory/: Factory.hpp
GUI/includes/GameData/: GameData.hpp
GUI/includes/Interface/: IEntity.hpp
GUI/includes/Item/: AItems.hpp  AStone.hpp  Deraumere.hpp  Egg.hpp  Food.hpp  Linemate.hpp  Mendiane.hpp  Phiras.hpp  Sibur.hpp  Thysmate.hpp
GUI/includes/Map/: ATiles.hpp
GUI/includes/Parser/: Parser.hpp  ParserServer.hpp
GUI/includes/Players/: APlayer.hpp  ATeams.hpp
GUI/includes/Rendering/: Menu.hpp  Mouse.hpp  Text.hpp  Window.hpp
GUI/includes/error/: Critical.hpp  Trivial.hpp
GUI/src/: main.cpp
GUI/src/Client/: Client.cpp  ParseArg.cpp
GUI/src/GameData/: GameData.cpp
GUI/src/Item/: AItems.cpp  AStones.cpp  Deraumere.cpp  Egg.cpp  Food.cpp  Linemate.cpp  Mendiane.cpp  Phiras.cpp  Sibur.cpp  Thysmate.cpp
GUI/src/Parser/: ParserServer.cpp
GUI/src/Rendering/: Map.cpp  Menu.cpp  Mouse.cpp  Player.cpp  Text.cpp  Window.cpp
IA/: Makefile  TODO.md  main.py
IA/package/: AI.py  BCParsing.py  README.md  __init__.py  const.py  matrice.py  memory.py  pyproject.toml  socket_tests.py  win.py  zappy_ai.py
Server/: CMakeLists.txt
Server/includes/: args.h  client.h  game_info.h  graphic_command.h  ia_command.h  server.h
Server/src/: broadcast.c  command.c  dash_help.c  egg.c  free_struct.c  game_info.c  graphic_command.c  handle_struct_arg.c  ia_command.c  in_the_loop.c  incantation.c  launch_loop.c  look.c  main.c  map.c  movement.c  parse_arg.c  print_info.c  queue.c  resources.c  send_graphic.c  tile_content.c  verif_incantation.c
workflows/: build.yml  coding-style.sh  style.yml
